# python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: build.yml  precommit.yml  python.yml  test.yml
python_template/: config.py  log.py  main.py
python_template/api/demo/: item.py  router.py
python_template/api/health/: router.py  status.py
python_template/api/middleware/: log.py
python_template/infrastructure/: db.py  repository.py  repository_status.py
tests/unit/: conftest.py  test_app.py  test_caplog.py  test_config.py  test_repository.py
tests/unit/api/: conftest.py  test_demo.py  test_health.py
tests/unit/middleware/: conftest.py  test_log_middleware.py
